# Neowave

./: .env.example  .gitignore  README.md  guideline.md  pyproject.toml
docs/: 01_neowave_overview_and_scope.md  02_neowave_pattern_rules_table.md  04_neowave_python_architecture.md  05_neowave_validation_and_limitations.md  NEoWave_Engine_2.0_Upgrade_Guidelines.md  NEoWave_engine_and_web_guide.md  newguideline.md  upgrade_guideline.md
rules/: neowave_rules.json
scripts/: fmp_smoketest.py
src/neowave_core/: __init__.py  cli.py  config.py  data_loader.py  macro_scanner.py  models.py  parser.py  pattern_evaluator.py  rule_checks.py  rule_engine.py  rules_db.py  rules_loader.py  scenarios.py  swings.py  wave_box.py  wave_engine.py  wave_tree.py
src/neowave_core/patterns/: __init__.py  common.py  common_types.py  complex_corrections.py  flat.py  impulse.py  metrics.py  terminal_impulse.py  triangle.py  zigzag.py
src/neowave_web/: __init__.py  api.py  schemas.py
src/neowave_web/static/: app.js  index.html
tests/: test_api.py  test_complex_corrections.py  test_engine.py  test_macro_scanner.py  test_patterns.py  test_rules_loader.py  test_scenarios.py  test_swings.py  test_triangle.py  test_verification.py
