[project]
name = "neowave-core"
version = "0.1.0"
description = "NEoWave Elliott Wave scenario engine core utilities"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "fastapi>=0.110",
  "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["neowave_core", "neowave_core.patterns", "neowave_web"]

[tool.setuptools.package-data]
neowave_web = ["static/*"]
